tfgcv/testdata/full_sql_database_instance.tf
resource "google_sql_database_instance" "master" {
  name             = "master-instance"
  database_version = "POSTGRES_9_6"
  region           = "us-central1"

  depends_on = [
    "google_service_networking_connection.private_vpc_connection"
  ]

  master_instance_name = "test-master_instance_name"
  replica_configuration {
    ca_certificate          = "test-ca_certificate"
    client_certificate      = "test-client_certificate"
    client_key              = "test-client_key"
    connect_retry_interval  = 42
    dump_file_path          = "test-dump_file_path"
    failover_target         = true
    master_heartbeat_period = 42
    password                = "test-password"
    # TODO.
    # Got: An argument named "sslCipher" is not expected here. Did you mean "ssl_cipher"?
    ssl_cipher                = "test-sslCipher"
    username                  = "test-username"
    verify_server_certificate = true
  }
  settings {
    activation_policy           = "test-activation_policy"
    authorized_gae_applications = ["test-authorized_gae_application1", "test-authorized_gae_application2"]
    availability_type           = "REGIONAL"
    backup_configuration {
      binary_log_enabled = true
      enabled            = true
      start_time         = "42:42"
    }
    crash_safe_replication = true
    database_flags {
      name  = "test-name1"
      value = "test-value1"
    }
    database_flags {
      name  = "test-name2"
      value = "test-value2"
    }
    disk_autoresize = true
    disk_size       = 42
    disk_type       = "test-disk_type"
    ip_configuration {
      authorized_networks {
        name            = "test-authorized_networks-name1"
        value           = "test-authorized_networks-value1"
        expiration_time = "test-expiration_time"
      }
      authorized_networks {
        name            = "test-authorized_networks-name2"
        value           = "test-authorized_networks-value2"
        expiration_time = "test-expiration_time"
      }
      ipv4_enabled    = true
      private_network = "${google_compute_network.private_network.self_link}"
      require_ssl     = true
    }
    location_preference {
      follow_gae_application = "test-follow_gae_application"
      zone                   = "test-zone"
    }
    maintenance_window {
      day          = 42
      hour         = 42
      update_track = "test-update_track"
    }
    pricing_plan     = "test-pricing_plan"
    replication_type = "test-replication_type"
    tier             = "db-f1-micro"
    user_labels = {
      user_labels_foo = "user_labels_bar"
    }
  }
}


resource "google_compute_network" "private_network" {
  name = "private-network"
}

resource "google_compute_global_address" "private_ip_address" {
  name          = "private-ip-address"
  purpose       = "VPC_PEERING"
  address_type  = "INTERNAL"
  prefix_length = 16
  network       = "${google_compute_network.private_network.self_link}"
}

resource "google_service_networking_connection" "private_vpc_connection" {
  network                 = "${google_compute_network.private_network.self_link}"
  service                 = "servicenetworking.googleapis.com"
  reserved_peering_ranges = ["${google_compute_global_address.private_ip_address.name}"]
}
